[gd_scene load_steps=6 format=3 uid="uid://enemy_ai"]

[ext_resource type="Script" path="res://scripts/enemies/EnemyAI.gd" id="1_enemy_ai"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_1"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(36, 36)

[sub_resource type="CircleShape2D" id="CircleShape2D_detection"]
radius = 150.0

[sub_resource type="CircleShape2D" id="CircleShape2D_attack"]
radius = 30.0

[node name="EnemyAI" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource("1_enemy_ai")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.8, 0.8, 0.2, 1)
texture = SubResource("PlaceholderTexture2D_1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="HealthLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = -30.0
text = "30/30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StateLabel" type="Label" parent="."]
offset_left = -30.0
offset_top = -55.0
offset_right = 30.0
offset_bottom = -45.0
text = "IDLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="DetectionCollision" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_detection")
debug_color = Color(0, 1, 0, 0.2)

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="AttackCollision" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_attack")
debug_color = Color(1, 0, 0, 0.2)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 4.0
target_desired_distance = 4.0
avoidance_enabled = true
radius = 15.0
neighbor_distance = 50.0
max_neighbors = 10
time_horizon_agents = 2.0

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_exited"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_velocity_computed"]